samples/_failures_safe/1761042409_98187d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc5fae2d.c: In function ‘main’:
./samples/SAFE/__tmp_dc5fae2d.c:155:12: error: missing terminating " character
  155 |     printf("Decompressed
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_dc5fae2d.c:155:5: error: expected expression at end of input
  155 |     printf("Decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_dc5fae2d.c:155:5: error: expected declaration or statement at end of input
